# AdventOfCode

./: .gitignore  LICENSE  README.md
2021/Day1/src/: main.rs
2021/Day2/src/: main.rs
2022/Day1/src/: main.rs
2022/Day2/src/: main.rs
2022/Day3/src/: main.rs
2022/Day4/src/: main.rs
2022/Day5/src/: main.rs
2022/Day6/src/: main.rs
2022/Day7/src/: main.rs
2022/Day8/src/: main.rs
2023/Day1/: CMakeLists.txt  task1.cpp  task1.hpp  task2.cpp
2023/Day2/: CMakeLists.txt  gamesets.cpp  main.cpp  task1.cpp  task2.cpp  task2.hpp
2023/Day3/: CMakeLists.txt  gamesets.hpp  main.cpp  task1.cpp  task2.cpp  task2.hpp
2025/Day1/: main.cpp  task1.cpp  task1.hpp  task2.cpp  task2.hpp
2025/Day2/: CMakeLists.txt  main.cpp  task1.hpp  task2.cpp  task2.hpp
2025/Day3/: CMakeLists.txt  main.cpp  task1.cpp  task1.hpp  task2.cpp  task2.hpp  testpayload.txt
2025/Day4/: CMakeLists.txt  main.cpp  task1.hpp
2025/Day5/: CMakeLists.txt  main.cpp  task1.cpp  task1.hpp  task2.cpp  task2.hpp
